[package]
name = "ripeatlas"
version = "0.1.0"
edition = "2021"

[features]
strict = []

[dependencies]
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
serde_repr = "0.1.9"
smallvec = "1.10.0"
itertools = "0.10.5"
chrono = { version = "0.4.23", features = ["serde"], optional = true }

[dev-dependencies]
bzip2 = "0.4.3"
libc = "0.2.137"
serde_json = "1.0.85"
format_serde_error = "0.3.0"
rayon = "1.6.0"

[[test]]
name = "check_format"







