[package]
name = "ripeatlas"
version = "0.2.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2021"
description = "A library for interfacing with the RIPE Atlas API in Rust"
license = "MIT"
repository = "https://github.com/jmeggitt/ripeatlas-rs"
keywords = ["ripe", "ripe-atlas", "api", "measurement"]
readme = "readme.md"

[features]
default = ["sync"]
strict = []
sync = ["ureq", "ureq/json"]
async = [] # Not implemented yet
format_check = []

[dependencies]
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.89"
serde_repr = "0.1.9"
smallvec = "1.10.0"
itertools = "0.10.5"
chrono = { version = "0.4.23", features = ["serde"], optional = true }
ureq = { version = "2.5.0", optional = true }
url = "2.3.1"

[dev-dependencies]
bzip2 = "0.4.3"
libc = "0.2.137"
serde_json = "1.0.85"
format_serde_error = "0.3.0"
rayon = "1.6.0"

